--- a/OnlineWolf/app/src/main/res/layout/fragment_main.xml
+++ b/OnlineWolf/app/src/main/res/layout/fragment_main.xml
@@ -1,11 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
+    android:orientation="vertical"
+    android:background="#9f7dff"
+    android:gravity="center_horizontal|center_vertical">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_send"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="#fff9ff"
+        android:typeface="sans"
+        android:textSize="50dp"
+        android:background="#3627ff"
+        android:id="@+id/menu_button"/>
 
-</RelativeLayout>
+
+</LinearLayout>
