--- a/OnlineWolf/app/src/main/res/layout/fragment_main.xml
+++ b/OnlineWolf/app/src/main/res/layout/fragment_main.xml
@@ -17,7 +17,8 @@
         android:typeface="sans"
         android:textSize="50dp"
         android:background="#3627ff"
-        android:id="@+id/menu_button"/>
+        android:id="@+id/menu_button"
+        android:onClick="startPlay"/>
 
 
 </LinearLayout>
