--- a/OnlineWolf/app/src/main/res/layout/fragment_main.xml
+++ b/OnlineWolf/app/src/main/res/layout/fragment_main.xml
@@ -5,20 +5,54 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
     android:orientation="vertical"
-    android:background="#9f7dff"
-    android:gravity="center_horizontal|center_vertical">
-
+    android:gravity="center_horizontal|center_vertical"
+    android:background="#2b2e25"
+    android:padding="50dp"
+    android:paddingEnd="25dp"
+    android:paddingStart="25dp">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"
+        android:text="PLAY"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="#fff9ff"
         android:typeface="sans"
-        android:textSize="50dp"
-        android:background="#3627ff"
-        android:id="@+id/menu_button"
-        android:onClick="startPlay"/>
+        android:textSize="50sp"
+        android:background="#b210ff"
+        android:id="@+id/menu_play"
+        android:onClick="startPlay"
+        android:padding="10dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
 
-
+    <Button
+        android:layout_width="303dp"
+        android:layout_height="wrap_content"
+        android:text="GAMEPLAY"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="#fff9ff"
+        android:typeface="sans"
+        android:textSize="50sp"
+        android:background="#b210ff"
+        android:id="@+id/menu_help"
+        android:onClick="startPlay"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:clickable="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EXIT"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="#fff9ff"
+        android:typeface="sans"
+        android:textSize="50sp"
+        android:background="#b210ff"
+        android:id="@+id/menu_exit"
+        android:onClick="startPlay"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
 </LinearLayout>
