--- a/OnlineWolf/app/src/main/res/layout/activity_show_login.xml
+++ b/OnlineWolf/app/src/main/res/layout/activity_show_login.xml
@@ -1,12 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.onlinewolf.onlinewolf.app.ShowLogin">
+    tools:context="com.example.onlinewolf.onlinewolf.app.ShowLogin"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:inputType="none"
+        android:hint="Enter Username"
+        android:layout_margin="8dp"
+        android:gravity="center"/>
 
-</RelativeLayout>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/editText2"
+        android:hint="Enter Password"
+        android:layout_margin="8dp"
+        android:gravity="center"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:padding="4dp"
+        android:text="CONFIRM"
+        android:gravity="center"
+        android:onClick="createUserFile"
+        android:id="@+id/confirmbutton"/>
+
+</LinearLayout>
